fix forgot password

--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -107,7 +107,7 @@ main section.forgot-password span.three::after {
   top: 73px;
 }
 
-main aside.forgot-password img {
+main aside.forgot-password img.logo {
   display: none;
 }
 
@@ -244,7 +244,7 @@ main aside.forgot-password p.forgot-password {
     display: none;
   }
 
-  main aside.forgot-password img {
+  main aside.forgot-password img.logo {
     display: block;
     width: 85px;
     height: 33px;
